--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         // ⚠️ SECURITY WARNING: In a real app, this MUST be on a secure server-side proxy.
         // For demonstration in this single-file environment, we place it here.
         // --- PASTE YOUR GEMINI API KEY HERE ---
-        const GEMINI_API_KEY = "AIzaSyCj8u8zcuA0r42G2UrI1hwJyX0ABSn2ySI"; 
+        const GEMINI_API_KEY = ""; 
         const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent";
 
         // --- SYSTEM INSTRUCTION FOR RELEVANCE (The Key to filtering irrelevant questions) ---
@@ -2357,3 +2357,4 @@ END OF SYSTEM INSTRUCTION.
 
 </body>
 </html>
+
